# deconvolution-filtering

./: .gitignore
cpp/: CMakeLists.txt  bootstrap.sh  configure  gcc48-bootstrap.sh
cpp/cmd/: CMakeLists.txt  deconvolvefilter.cc  deconvolvefilter_test.cc
cpp/include/deconvolvefilter/: appinfo.h  appinfo.h.in.cmake  config.h  config.h.in.cmake  deconvolvefilter.hpp  version.hpp
cpp/include/deconvolvefilter/internal/: deconvolvefilter.hpp  singleton.hpp  thread_pool.hpp  utils.hpp
cpp/src/: CMakeLists.txt  appinfo.h
cpp/test/: CMakeLists.txt  sanity_check.cpp
data/: activation.txt
misc/: bld.sh  gcc-bootstrap.sh
ref/: AEC.005.anat3.seg.fsl.MNI.GM+tlrc.BRIK  AEC.005.anat3.seg.fsl.MNI.GM+tlrc.HEAD  deconvolve_filter.m  filter.tar  test_deconv_filter.m  whole_brain_decon_filter.m
ref/anev_src/: gen_BOLD_from_NEV_Balloon.m  generate_anev_roi_model.m  observe_roi.m
ref/deconv_filter_ONLINE/anev_src/: sample_network.m
ref/deconv_filter_ONLINE/data/: run1.txt  run2.txt  run3.txt  run4.txt
ref/deconv_filter_ONLINE/deconvolve_src/: deconvolve_Bush_2011.m
ref/deconvolve_src/: deconvolve_Bush_2011.m
ref/libs/misc/nii_files/: expand_nii_scan.m  expand_nii_scan_interrupted_jlenow.m  rotateticklabel.m  rotateticklabel_new.m
ref/utility_src/: spm_advanced_hrf.m
